Fix overflow

--- a/frontend/src/css/AboutSection.css
+++ b/frontend/src/css/AboutSection.css
@@ -1,3 +1,7 @@
+.about-section-container {
+  overflow-x: clip;
+}
+
 .about-section {
   display: flex;
   position: relative;
